# Tax_AI

./: .dockerignore  .gitignore  2408.09869v5-with-image-refs.md  2408.09869v5-with-image-refs_gemini_summary.md  COMPLETE_IMPLEMENTATION_SUMMARY.txt  COMPLETE_REQUIREMENTS.txt  Dockerfile  Dockerfile.api  Dockerfile.frontend  FINAL_STATUS_v2.py  LLM_SCHEMA_VERIFICATION_INTEGRATION_GUIDE.txt  README.md  SYSTEM_STATUS.py  analyze_w2_issue.py  complete_workflow_schema_to_tax.py  debug_regex.py  debug_w2_extraction.py  demo_llm_tax_agent.py  diagnose_403_error.py  docker-compose.yml  example_complete_workflow.py  fix_1099_misc_extraction.py  fix_all_unicode.py  fix_unicode.py  llm_schema_verification_agent.py  pyproject.toml  requirements-all.txt  requirements.txt  show_complete_workflow.py  show_integration_guide.py  test_1099_div_extraction.py  test_1099_forms.py  test_1099_misc_correct.py  test_1099_misc_fix.py  test_ade_format.py  test_all_1099_comprehensive.py  test_all_1099_forms.py  test_backend_extraction.py  test_comprehensive_fix.py  test_detection_only.py  (+26 more)
.streamlit/: config.toml
PDF_Extraction_and_Markdown_Generation/: docklingextraction.py
WebScraping_Extraction_and_Markdown_Generation/: EnterpriseWebScrap.py
api/: .dockerignore  .env.template  Dockerfile  api_log.txt  docklingextraction.py  form_1040_generator.py  logger.py  main.py  multi_form_api.py  open_source_parsing.py  requirements.txt  run_server.py  supervisord.conf  tax_calculation_engine.py  tax_document_parser.py  test_cases.py  worker.py
backend/: llm_tax_agent.py
frontend/: .dockerignore  1_Home.py  Dockerfile  Home.py  MakeFile  Tax_Agent.py  app.py  multi_form_ui.py  requirements.txt  tax_upload.py  test.py
llm_extractor/: landingai_processor.py  litellm_cgpt_markdowninput.py  litellm_claude_markdowninput.py  litellm_gemini.py  litellm_gemini_markdowninput.py  litellm_grok_markdowninput.py  litellm_query_generator.py
llm_question&answers/: litellm_claude_questans.py  litellm_deepSeek_questans.py  litellm_gemini_questans.py
llm_question_answers/: litellm_claude_questans.py  litellm_deepSeek_questans.py  litellm_gemini_questans.py
(+38 files in other folders)
